# ParticleFilterTrackingSmallTarget

./: .gitignore  CMakeLists.txt  LICENSE  ParticleFilterTrackingSmallTarget.sln  README.md
ParticleFilterTrackingSmallTarget/: BinaryFileStream.cpp  BinaryFileStream.h  Orientation.h  ParticleFilterTrackingSmallTarget.vcxproj  ParticleFilterTrackingSmallTarget.vcxproj.filters  State.h  Tracker.cpp  Tracker.h  Utils.cpp  Utils.h  main.cpp
PropsForOpenCV/: WithOpenCV2.4.13Debugx64VS2015.props  WithOpenCV2.4.13Releasex64VS2015.props
